--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,16 @@
-[{"title": "madueke", "description": "asdfghj", "priority": 1, "deadline": "2021-12-12T12:12:00", "duration": 1.0}, {"title": "madueie", "description": "asdfg", "priority": 1, "deadline": "2012-12-21T12:12:00", "duration": 1.0}]
+[
+    {
+        "title": "Emmanuel",
+        "description": "456jfjjkgkpvkljv",
+        "priority": 2,
+        "deadline": "2025-06-23T12:00:00",
+        "duration": 2.0
+    },
+    {
+        "title": "Read for Cos120 exam",
+        "description": "",
+        "priority": 3,
+        "deadline": "2025-06-21T09:30:00",
+        "duration": 1.0
+    }
+]
